[package]
name = "finneo_crypto"
version = "0.1.0"
edition = "2024"
description = "Cross-platform encryption library for Finneo"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "finneo_crypto"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
ring = "0.17"
argon2 = "0.5"
thiserror = "2.0"
uniffi = { version = "0.30", features = ["cli"] }
